Fix: let boxnav items wrap if needed

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -132,6 +132,7 @@ ul.boxnav {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-wrap: wrap;
 }
 
 ul.boxnav > li {
